solved problem with sidebar visibility

--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -79,6 +79,7 @@
 }
 
 .page__sidebar {
+  z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
